// 描述: 数据库 
// 使用: 服务器
syntax = "proto3";
import "base.proto";
package DbRpc;

// 30000 ~ 35000
enum DbProxyRPC {
    DB_RPC_NONE = 0;
    
    REQ_REDIS_QUERY = 30001;
    ACK_REDIS_QUERY = 30002;

    REQ_MONGO_QUERY = 30500;
    ACK_MONGO_QUERY = 30501;

    REQ_MYSQL_QUERY = 31000;
    ACK_MYSQL_QUERY = 31001;

    REQ_CLICKHOUSE_QUERY = 31500;
    ACK_CLICKHOUSE_QUERY = 31501;

}

message Data {
    int32 type = 1;
    bytes value = 2;
}

message List {
    int32 type = 1;
    repeated bytes values = 2;
}

enum RedisCMD {
    REDIS_CMD_NONE = 0;
    REDIS_RAW = 1;
    REDIS_SET = 10;
    REDIS_GET = 11;
    REDIS_HSET = 12;
    REDIS_HGET = 13;
    REDIS_HSETALL = 14;
    REDIS_HGETALL = 15;
}

message ReqRedisQuery {
    int32 query_id = 1;
    RedisCMD cmd = 2;
    map<string, Data> args = 3;
}

message AckRedisQuery {
    bool code = 1;
    int32 query_id = 2;
    RedisCMD cmd = 3;
    map<string, Data> args = 4;
}

enum MysqlCMD {
    MYSQL_CMD_NONE = 0;
    MYSQL_RAW = 1;
    MYSQL_SELECT = 10;
    MYSQL_INSERT = 11;
    MYSQL_DELETE = 12;
    MYSQL_UPDATE = 13;
}

message ReqMysqlQuery {
    int32 query_id = 1;
    bytes db_name = 2;
    MysqlCMD cmd = 3;
    map<string, Data> args = 4;
}

message AckMysqlQuery {
    int32 query_id = 1;
    ReqMysqlQuery cmd = 2;
    bytes db = 3;
    map<string, List> data = 4;
}

enum MongoCMD {
    MONGO_CMD_NONE = 0;
    MONGO_RAW = 1;
}
